Partial_14Dec2021/force-app/main/default/objects/Promotions__c/Promotions__c.object-meta.xml
<CustomObject>
    <label>Promotions(O)</label>
    <nameField>
        <displayFormat>PN-{YY}-{MM}-{0}</displayFormat>
        <label>Promotions No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotionsold</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>