Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Actual_No_of_Members__c.field-meta.xml
<CustomField>
    <fullName>Actual_No_of_Members__c</fullName>
    <label>Actual No of Members</label>
    <summarizedField>Promotion_Members__c.Flag__c</summarizedField>
    <summaryForeignKey>Promotion_Members__c.Promotions__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>