Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Ashirvad_Representative1__c.field-meta.xml
<CustomField>
    <fullName>Ashirvad_Representative1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ashirvad Representative1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>