Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Ashirvad_Representative3__c.field-meta.xml
<CustomField>
    <fullName>Ashirvad_Representative3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ashirvad Representative3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Promotions2</relationshipName>
    <type>Lookup</type>
</CustomField>