Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Call_Completed_Members__c.field-meta.xml
<CustomField>
    <fullName>Call_Completed_Members__c</fullName>
    <label>Call Completed Members</label>
    <summaryFilterItems>
        <field>Promotion_Members__c.Call_Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Promotion_Members__c.Promotions__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>