Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Call_Verified__c.field-meta.xml
<CustomField>
    <fullName>Call_Verified__c</fullName>
    <formula>IF( Members_Added__c - Call_Completed_Members__c = 0, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Verified</label>
    <type>Text</type>
</CustomField>