Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bagalkot</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Bangalore Rural</fullName>
            </value>
            <value>
                <fullName>Belgaum</fullName>
            </value>
            <value>
                <fullName>Bellary</fullName>
            </value>
            <value>
                <fullName>Bidar</fullName>
            </value>
            <value>
                <fullName>Bijapur</fullName>
            </value>
            <value>
                <fullName>Chamarajanagar</fullName>
            </value>
            <value>
                <fullName>Chikballapur</fullName>
            </value>
            <value>
                <fullName>Chikmagalur</fullName>
            </value>
            <value>
                <fullName>Chitradurga</fullName>
            </value>
            <value>
                <fullName>Dakshina Kannada</fullName>
            </value>
            <value>
                <fullName>Davanagere</fullName>
            </value>
            <value>
                <fullName>Dharwad</fullName>
            </value>
            <value>
                <fullName>Gadag</fullName>
            </value>
            <value>
                <fullName>Gulbarga</fullName>
            </value>
            <value>
                <fullName>Hassan</fullName>
            </value>
            <value>
                <fullName>Haveri</fullName>
            </value>
            <value>
                <fullName>Kodagu</fullName>
            </value>
            <value>
                <fullName>Kolar</fullName>
            </value>
            <value>
                <fullName>Koppal</fullName>
            </value>
            <value>
                <fullName>Mandya</fullName>
            </value>
            <value>
                <fullName>Mysore</fullName>
            </value>
            <value>
                <fullName>Raichur</fullName>
            </value>
            <value>
                <fullName>Ramanagara</fullName>
            </value>
            <value>
                <fullName>Shimoga</fullName>
            </value>
            <value>
                <fullName>Tumkur</fullName>
            </value>
            <value>
                <fullName>Udupi</fullName>
            </value>
            <value>
                <fullName>Uttara Kannada</fullName>
            </value>
            <value>
                <fullName>Yadgir</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>