Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Members_Added__c.field-meta.xml
<CustomField>
    <fullName>Members_Added__c</fullName>
    <label>Members Added</label>
    <summarizedField>Promotion_Members__c.Flag__c</summarizedField>
    <summaryForeignKey>Promotion_Members__c.Promotions__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>