Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Members_attended_not_equal_to_actual__c.field-meta.xml
<CustomField>
    <fullName>Members_attended_not_equal_to_actual__c</fullName>
    <formula>Total_no_of_attendees__c &lt;&gt; Members_Added__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Members attended not equal to actual</label>
    <type>Checkbox</type>
</CustomField>