Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Number_Of_Members_Attended__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Members_Attended__c</fullName>
    <label>Number Of Members Attended</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>