Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Owner_Title__c</fullName>
    <formula>CreatedBy.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Title</label>
    <type>Text</type>
</CustomField>