Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Promotion_Status__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Status__c</fullName>
    <label>Promotion Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <color>#A53711</color>
                <label>Other</label>
            </value>
            <value>
                <fullName>Call Completed</fullName>
                <color>#006600</color>
                <label>Call Completed</label>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
                <color>#FF0000</color>
                <label>Not Reachable</label>
            </value>
            <value>
                <fullName>Invalid number</fullName>
                <color>#FFCC33</color>
                <label>Invalid number</label>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
                <color>#FF9966</color>
                <label>Wrong Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>