Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/RelatedtoType__c.field-meta.xml
<CustomField>
    <fullName>RelatedtoType__c</fullName>
    <formula>&apos;Promotions&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RelatedtoType</label>
    <type>Text</type>
</CustomField>