Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Report</label>
    <type>TextArea</type>
</CustomField>