Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>