Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Suggestion__c</fullName>
    <label>Suggestion</label>
    <type>TextArea</type>
</CustomField>