Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Targets__c.field-meta.xml
<CustomField>
    <fullName>Targets__c</fullName>
    <label>Targets</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <filterItems>
            <field>Targets__c.Type_of_Promotion__c</field>
            <operation>equals</operation>
            <valueField>$Source.Type__c</valueField>
        </filterItems>
        <filterItems>
            <field>Targets__c.Date__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>$Source.Date__c</valueField>
        </filterItems>
        <filterItems>
            <field>Targets__c.OwnerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>equals</operation>
            <value>Director, Ashirvad HO</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Targets__c</referenceTo>
    <relationshipName>Promotions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>