Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Total_no_of_attendees__c.field-meta.xml
<CustomField>
    <fullName>Total_no_of_attendees__c</fullName>
    <inlineHelpText>Please enter the number of people attended this promotional event</inlineHelpText>
    <label>No of Members attended</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>