Partial_14Dec2021/force-app/main/default/objects/Promotions__c/fields/Verified1__c.field-meta.xml
<CustomField>
    <fullName>Verified1__c</fullName>
    <formula>Members_Added__c - Call_Completed_Members__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>