Partial_14Dec2021/force-app/main/default/objects/Promotions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Distributor_Dealer__c</columns>
    <columns>Verified__c</columns>
    <columns>Type__c</columns>
    <columns>Promotion_Status__c</columns>
    <columns>Date__c</columns>
    <columns>City__c</columns>
    <columns>Total_no_of_attendees__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>