Partial_14Dec2021/force-app/main/default/objects/Promotions__c/listViews/My_Promotion.listView-meta.xml
<ListView>
    <fullName>My_Promotion</fullName>
    <columns>NAME</columns>
    <columns>Verified__c</columns>
    <columns>Distributor_Dealer__c</columns>
    <columns>Promotion_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>Remarks__c</columns>
    <columns>Total_no_of_attendees__c</columns>
    <columns>Total_Expenses__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Promotion</label>
</ListView>