Partial_14Dec2021/force-app/main/default/objects/Promotions__c/listViews/My_Promotion_This_Month.listView-meta.xml
<ListView>
    <fullName>My_Promotion_This_Month</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Distributor_Dealer__c</columns>
    <columns>Verified__c</columns>
    <columns>Type__c</columns>
    <columns>City__c</columns>
    <columns>Date__c</columns>
    <columns>Total_no_of_attendees__c</columns>
    <columns>Total_Expenses__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>My Promotion (This Month)</label>
</ListView>